/**
 * jQuery Stepy - A Wizard Plugin - http://wbotelhos.com/stepy
 * --------------------------------------------------------------------------
 *
 * 1.0.0
 * - Fixed validation to disabled fields do not validate;
 * - Fixed validations when jQuery Validation returns undefined and blocks.
 *
 * 0.5.1
 *   - Fixed the focus of the first error field (reported by luckyong);
 *   - Avoided highlight only the first field when has multiple invalids fields on the form.
 *
 * 0.5.0
 *   - Added the 'titleTarget' attribute to choose the place where titles will be placed;
 *   - Added the 'legend' attribute to choose if the legends of the steps will be showed;
 *   - Added the 'description' attribute to choose if the descriptions of the titles will be showed;
 *   - Added the 'finish' callback attribute that enables action before finish the steps;
 *   - Fixed the possible bug when the ID has more than one word or has number;
 *   - Fixed the possible bug when the ID has more than one word or has number;
 *   - Fixed: avoided the validation of the lastest step when the validation is not enabled;
 *   - Fixed: when there is only one step, the finish button does not appear (reported by DevPHP);
 *   - The 'onBack' attribute was named just to 'back';
 *   - The 'onNext' attribute was named just to 'next';
 *   - The 'finish' attribute was named to 'finishButton';
 *   - The 'back' and 'next' callback no longer has a default function;
 *   - The finish button is now required for any kind of step if that option is enabled;
 *   - Keeped the options as data called 'options' in the wrapper element to future usages.
 *
 * 0.4.1
 *   - Fixed: the validation highlighted only the first field (fixed by legigor).
 *
 * 0.4.0
 *   - Now the enter key goes to next step and just validate the currrent one (reported by hennaTheGreat);
 *   - Public functions now supports actions by class (reported by hennaTheGreat);
 *   - Public functions without specify ID or class is no longer supported;