@@ -456,9 +456,7 @@
 					back: function(index) {
 						alert('Going to step ' + index + '...');
 					}, next: function(index) {
-						var random = Math.floor(Math.random() * 11);
-
-						if (random < 5) {
+						if ((Math.random() * 10) < 5) {
 							alert('Invalid random value!');
 							return false;
 						}
