@@ -3,6 +3,10 @@
  * --------------------------------------------------------------------------
  *
  * 1.0.0
+ * - Now we using the best pratice to build the plugin;
+ * - Now the plugin is under test with Jasmine and Jasmine jQuery;
+ * - Now public function is on context scope instead on $.fn;
+ * - Fixed the several invocation of select step on each validation;
  * - Fixed validation to disabled fields do not validate;
  * - Fixed validations when jQuery Validation returns undefined and blocks.
  *
